[package]
name = "ip_webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4.7"
log = "0.4.27"
paris = {version = "1.5.15", features = ["timestamps"]}
regex = "1.12.2"
toml = "0.9.8"

[dependencies.reqwest]
version = "0.12.18"
default-features = false
features = ["json", "blocking", "rustls-tls"]
